cluster/apps/default/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name homeassistant
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: *name
          image: ghcr.io/home-assistant/home-assistant:2022.6.5
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 250Mi
          ports:
            - name: &port http
              protocol: TCP
              containerPort: 8123
          volumeMounts:
            - name: homeassistant-configs
              mountPath: /config
          startupProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 30
          livenessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 0
            timeoutSeconds: 3
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 30
      dnsPolicy: ClusterFirst
      securityContext:
        runAsUser: 0
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: homeassistant-configs
          persistentVolumeClaim:
            claimName: homeassistant-config
