cluster/apps/default/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  labels:
    app.kubernetes.io/name: homeassistant
spec:
  selector:
    app.kubernetes.io/name: homeassistant
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: http
  type: ClusterIP
